fix: make sidenav overflow content scrollable

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -202,6 +202,9 @@ body {
 
 .Users {
     padding-top: 41px;
+    box-sizing: border-box;
+    overflow: auto;
+    height: 100%;
 }
 
 .User-tabs-3,
@@ -213,6 +216,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 100;
 }
 
 .User-tab {
